/**
 * Represents the main character of the game
 * @extends MovableObject
 */
class Character extends MovableObject {
}
