@startuml El Pollo Loco - Detailed Hierarchy

'Layout settings
skinparam monochrome true
skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam style strictuml

' Definition of the Entry Point
node "scripts/script.js" as Script {
}

package "Classes" {
    class Game {
        + ctx: CanvasRenderingContext2D
        + rafId: number
        + isRunning: boolean
        --
        + constructor(canvasId: string)
        + getCanvasContext(id: string): CanvasRenderingContext2D
        + start()
        + stop()
        + animate()
    }

    abstract class DrawableObject {
        + x: number
        + y: number
        + height: number
        + width: number
        + percentage: number
        + img: HTMLImageElement
        --
        + loadImage(path: string)
        + draw(ctx: CanvasRenderingContext2D)
    }

    abstract class MovableObject extends DrawableObject {
        + speed: number
        --
        + moveRight()
    }

    class Character extends MovableObject
    class Enemy extends MovableObject
    class Cloud extends MovableObject
    class BackgroundObject extends DrawableObject
}

' Linking the Script to the Game class
Script ..> Game : "starts"
Game "1" -- "1" DrawableObject : "manages"

@enduml
